# winkyfarm

./: Dockerfile  DockerfileForWorker  README.md  manage.py  pyproject.toml
.github/workflows/: action.yml
accounts/: admin.py
accounts/migrations/: 0001_initial.py
kubenetes/: app.yml  worker.yml
plants/: admin.py  models.py  tests.py  urls.py  views.py
plants/migrations/: 0001_initial.py  0002_remove_plant_last_water_date_waterlog.py  0003_remove_waterlog_updated_at_and_more.py
plants/templates/plants/: plant_detail.html
winkyfarm/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
winkyfarm/settings/: collectstatic.py  common.py  dev.py  prod.py
