[tool.poetry]
name = "winkyfarm"
version = "0.1.0"
description = ""
authors = ["Jaesik <joje1283@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
