[tool.poetry]
name = "winkyfarm"
version = "0.1.0"
description = ""
authors = ["Jaesik <joje1283@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"
uvicorn = "^0.18.2"
celery = "^5.2.7"
django-celery-results = "^2.4.0"
sentry-sdk = "^1.8.0"
qrcode = "^7.3.1"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
